--- a/MDK-ARM/Output/lgac_ctlr.build_log.htm
+++ b/MDK-ARM/Output/lgac_ctlr.build_log.htm
@@ -28,19 +28,23 @@ Project File Date:  05/28/2018
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F429I_DISCO_MB1075'
 compiling stm32f4xx_it.c...
-compiling main.c...
-compiling LCDConf_stm32f429i_disco_MB1075.c...
+compiling adc.c...
+compiling gpio.c...
 compiling tim.c...
 compiling hvac_ctl.c...
-compiling gpio.c...
-compiling adc.c...
+..\Src\hvac_ctl.c(91): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  										    tms = ((float)tms/180000.0)*100.0;
+..\Src\hvac_ctl.c: 1 warning, 0 errors
+compiling main.c...
 compiling ir_rmt_txr.c...
 ..\Src\ir_rmt_txr.c(170): warning:  #550-D: variable "lastState"  was set but never used
   static uint8_t lastState = INITTX;
 ..\Src\ir_rmt_txr.c: 1 warning, 0 errors
+compiling WindowDLG.c...
+compiling LCDConf_stm32f429i_disco_MB1075.c...
 linking...
-Program Size: Code=77076 RO-data=44064 RW-data=1344 ZI-data=39168  
-".\Output\lgac_ctlr.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=83568 RO-data=44212 RW-data=1444 ZI-data=39228  
+".\Output\lgac_ctlr.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -63,7 +67,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.1
-Build Time Elapsed:  00:00:10
+Build Time Elapsed:  00:00:11
 </pre>
 </body>
 </html>
