--- a/MDK-ARM/Output/lgac_ctlr.build_log.htm
+++ b/MDK-ARM/Output/lgac_ctlr.build_log.htm
@@ -27,21 +27,13 @@ Project File Date:  05/28/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F429I_DISCO_MB1075'
-compiling hvac_ctl.c...
-..\Src\hvac_ctl.c(86): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  						  if(ctldata_s.cond_s.rdb >= 38.00 &&
-..\Src\hvac_ctl.c(95): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  										    tms = ((float)tms/180000.0)*100.0;
-..\Src\hvac_ctl.c(103): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  			if((ctldata_s.set1_s.rdb - ctldata_s.cond_s.rdb) > 3.0 &&
-..\Src\hvac_ctl.c(104): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  				ctldata_s.set1_s.rdb <= 70.00)
-..\Src\hvac_ctl.c(145): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-    if( ctldata_s.cond_s.rdb <= 38.00 ){
-..\Src\hvac_ctl.c: 5 warnings, 0 errors
+compiling WindowDLG.c...
+..\Src\WindowDLG.c(720): warning:  #550-D: variable "ucSfCnt"  was set but never used
+  	static uint8_t ucSfCnt=0;
+..\Src\WindowDLG.c: 1 warning, 0 errors
 linking...
-Program Size: Code=83892 RO-data=44232 RW-data=1448 ZI-data=39232  
-".\Output\lgac_ctlr.axf" - 0 Error(s), 5 Warning(s).
+Program Size: Code=83784 RO-data=44232 RW-data=1448 ZI-data=39232  
+".\Output\lgac_ctlr.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
