20180621_1643 Implemented Blinking PWR BTN and Snowflake IMGs
1. I implemented blinking the snowflake image when AC LED is OFF
2. implemented blinking power button image when in frost error & warm up period
3. merged uptime and dbglog text, if no dbglog data then display the uptime

--- a/MDK-ARM/Output/lgac_ctlr.build_log.htm
+++ b/MDK-ARM/Output/lgac_ctlr.build_log.htm
@@ -27,13 +27,10 @@ Project File Date:  05/28/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F429I_DISCO_MB1075'
-compiling WindowDLG.c...
-..\Src\WindowDLG.c(720): warning:  #550-D: variable "ucSfCnt"  was set but never used
-  	static uint8_t ucSfCnt=0;
-..\Src\WindowDLG.c: 1 warning, 0 errors
+compiling hvac_ctl.c...
 linking...
-Program Size: Code=83784 RO-data=44232 RW-data=1448 ZI-data=39232  
-".\Output\lgac_ctlr.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=83572 RO-data=44232 RW-data=1448 ZI-data=39232  
+".\Output\lgac_ctlr.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
