--- a/MDK-ARM/Output/lgac_ctlr.build_log.htm
+++ b/MDK-ARM/Output/lgac_ctlr.build_log.htm
@@ -22,11 +22,14 @@ Dialog DLL:      TCM.DLL V1.35.1.0
  
 <h2>Project:</h2>
 C:\Users\keipe_v\Documents\TDI\firmware\STM32F4\STM32Cube_FW_F4_V1.16.0\Projects\STM32F429I-Discovery\Applications\STemWin\LGAC_CONTROLLER\MDK-ARM\Project.uvprojx
-Project File Date:  05/28/2018
+Project File Date:  07/05/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F429I_DISCO_MB1075'
+compiling main.c...
+linking...
+Program Size: Code=88424 RO-data=44232 RW-data=1480 ZI-data=39600  
 ".\Output\lgac_ctlr.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -50,7 +53,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.1
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
