--- a/MDK-ARM/Output/lgac_ctlr.build_log.htm
+++ b/MDK-ARM/Output/lgac_ctlr.build_log.htm
@@ -28,9 +28,20 @@ Project File Date:  07/05/2018
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F429I_DISCO_MB1075'
 compiling modbusrtu.c...
+..\Src\modbusrtu.c(273): warning:  #177-D: variable "sFirstChunk"  was declared but never referenced
+  			uint8_t sFirstChunk[64], sSecondChunk[64];
+..\Src\modbusrtu.c(273): warning:  #177-D: variable "sSecondChunk"  was declared but never referenced
+  			uint8_t sFirstChunk[64], sSecondChunk[64];
+..\Src\modbusrtu.c(275): warning:  #177-D: variable "pSecond"  was declared but never referenced
+  			uint8_t *pFirst,*pSecond;
+..\Src\modbusrtu.c(518): warning:  #550-D: variable "nChars"  was set but never used
+      int nChars=0;
+..\Src\modbusrtu.c(125): warning:  #177-D: function "_MBDumpFrame"  was declared but never referenced
+  static void _MBDumpFrame(void)
+..\Src\modbusrtu.c: 5 warnings, 0 errors
 linking...
-Program Size: Code=91204 RO-data=44296 RW-data=1496 ZI-data=40168  
-".\Output\lgac_ctlr.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=91300 RO-data=44296 RW-data=1500 ZI-data=40156  
+".\Output\lgac_ctlr.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
