--- a/MDK-ARM/Output/lgac_ctlr.build_log.htm
+++ b/MDK-ARM/Output/lgac_ctlr.build_log.htm
@@ -27,17 +27,37 @@ Project File Date:  07/05/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F429I_DISCO_MB1075'
+compiling tim.c...
+compiling stm32f4xx_it.c...
+compiling adc.c...
+compiling gpio.c...
+compiling ir_rmt_txr.c...
+..\Src\ir_rmt_txr.c(170): warning:  #550-D: variable "lastState"  was set but never used
+  static uint8_t lastState = INITTX;
+..\Src\ir_rmt_txr.c: 1 warning, 0 errors
+compiling main.c...
+compiling hvac_ctl.c...
+compiling usart.c...
+compiling WindowDLG.c...
+..\Src\WindowDLG.c(836): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				ctldata_s.acCoolTemps.dmd = ctldata_s.acCoolTemps.dmd +1.00;
+..\Src\WindowDLG.c(837): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			  if(ctldata_s.acCoolTemps.dmd >= 75.00){
+..\Src\WindowDLG.c(684): warning:  #177-D: variable "scTempRoom"  was declared but never referenced
+  static int8_t scTempRoom=0;
+..\Src\WindowDLG.c: 3 warnings, 0 errors
 compiling modbusrtu.c...
-..\Src\modbusrtu.c(276): warning:  #177-D: variable "pSecond"  was declared but never referenced
+..\Src\modbusrtu.c(277): warning:  #177-D: variable "pSecond"  was declared but never referenced
   			uint8_t *pFirst,*pSecond;
-..\Src\modbusrtu.c(529): warning:  #550-D: variable "nChars"  was set but never used
+..\Src\modbusrtu.c(539): warning:  #550-D: variable "nChars"  was set but never used
       int nChars=0;
-..\Src\modbusrtu.c(127): warning:  #177-D: function "_MBDumpFrame"  was declared but never referenced
+..\Src\modbusrtu.c(128): warning:  #177-D: function "_MBDumpFrame"  was declared but never referenced
   static void _MBDumpFrame(void)
 ..\Src\modbusrtu.c: 3 warnings, 0 errors
+compiling LCDConf_stm32f429i_disco_MB1075.c...
 linking...
-Program Size: Code=91332 RO-data=44296 RW-data=1500 ZI-data=40156  
-".\Output\lgac_ctlr.axf" - 0 Error(s), 3 Warning(s).
+Program Size: Code=91632 RO-data=44372 RW-data=1504 ZI-data=40224  
+".\Output\lgac_ctlr.axf" - 0 Error(s), 7 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -60,7 +80,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.1
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:13
 </pre>
 </body>
 </html>
